[package]
name = "dbdb"
version = "0.1.0"
authors = ["diego <Diego>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.6.0"
snap = "1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
clap = "~2.33"